<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Step4Activity"
    tools:layout_editor_absoluteX="-6dp"
    tools:layout_editor_absoluteY="22dp">

    <Button
        android:id="@+id/login_button"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:backgroundTint="#0468FF"
        android:fontFamily="@font/poppins_light"
        android:text="@string/Login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:lineSpacingExtra="0.5sp"
        android:text="@string/step4_descript"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        app:srcCompat="@drawable/step4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="279dp"
        android:layout_height="289dp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.759"
        app:srcCompat="@drawable/logo_1" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:fontFamily="@font/poppins_bolditalic"
        android:text="@string/Ease"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Diabet"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

</androidx.constraintlayout.widget.ConstraintLayout>